# okinawago_dictionary

./: README.md  kanahyouki.py  makefile  pyproject.toml  xlsx2tsv.py
data/: okinawa_01.tsv  okinawa_02.xlsx
resources/: kana-table-original.txt  kana-table.json  kana-table.txt  okinawa_01.xlsx  okinawa_03.xlsx  phonetics-table.html  phonetics-table.json  pronuncation_noise.tsv  pronunciation-table.json  roman-to-ipa-dict.json
resources/base_lists/: okinawa_01.tsv  okinawa_02.json  okinawa_02.tsv
scripts/: dictionary.py  generate_base_json.py  kanahyouki.py  test_kanahyouki.py  xlsx2tsv.py
src/: conjugations.py  generate_base_json.py  kanahyouki.py  pos.py  test_kanahyouki.py  utils.py  verb_notation_stats.txt  verb_notation_types.txt  xlsx2tsv.py
src/conjugation/: analysis.py  conjugations.py  verb_notation_stats.txt  verb_notation_types.txt
src/okinawago_dictionary/: dictionary.py  katsuyou_jiten.json  katsuyou_jiten_index-table.json  okinawa_01_index-table.json  okinawa_02_index-table.json
src/phonetics/: generate_kana_table.py  generate_phonetics_table.py
src/uchinaaguchi_katsuyou_jiten/: README.md  analyse_size_index_rel.py  dict_items.jsonl  generate_dictionary.py  katsuyou_jiten.jsonl  pdf2jsonl.py
tests/: test_converters.py  test_kanahyouki.py
