[tool.poetry]
name = "okinawago_dictionary"
version = "0.1.0"
description = ""
authors = ["Hisanobu Nkamaura"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
toml = "^0.10.2"
wanakana-python = "^1.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
jedi = "^0.18.1"
yapf = "^0.32.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pylint = "^2.15.5"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120