[tool.poetry]
name = "okinawago_dictionary"
version = "0.4.0"
description = ""
authors = ["Hisanobu Nkamaura"]

[tool.poetry.dependencies]
python = "^3.10"
wanakana-python = "^1.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
jedi = "^0.18.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pylint = "^2.15.5"
ipython = "^8.6.0"
black = "^22.12.0"
autopep8 = "^2.0.0"
yapf = "^0.32.0"
pandas = "^2.1.0"
"pdfminer.six" = "^20221105"
pdfminer = "^20191125"
Jinja2 = "^3.1.2"
openpyxl = "^3.1.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120